--- a/GolfingStats/GolfingStats/Pages/RoundDetailsPage.xaml
+++ b/GolfingStats/GolfingStats/Pages/RoundDetailsPage.xaml
@@ -4,20 +4,28 @@
              x:Class="GolfingStats.Pages.RoundDetailsPage">
     
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Start Round" Clicked="StartNewRound" />
+        <ToolbarItem x:Name="tlbGoToHole" Text="Start Round" />
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
         <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-            
-            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
+
+            <!--Course Picker-->
+            <StackLayout x:Name="stkCoursePick" Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
                 <Label HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Text="GolfCourse" />
                 <Picker x:Name="CoursePicker" HorizontalOptions="CenterAndExpand" VerticalOptions="Start" HeightRequest="80" Title="Choose Course" SelectedIndexChanged="CourseSelected" />
             </StackLayout>
+
+            <!--CourseName-->
+            <StackLayout x:Name="stkCourseDisplay" Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
+                <Label HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Text="Course Name" />
+                <Label HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Text="{Binding CourseName}" />
+            </StackLayout>
             
+            <!--Date-->
             <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
                 <Label HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Text="Date Played" />
-                <DatePicker HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" Date="{Binding Date}" />
+                <DatePicker HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Date="{Binding Date}" />
             </StackLayout>
             
         </StackLayout>
